wsConsumer addition