@@ -79,6 +79,14 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
+                     <options>
+                        <option>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
+                        <option>--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
+                        <option>--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix</option>
+                        <option>--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
+                        <option>--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix</option>
+                        <option>--add-opens=java.base/java.lang.reflect=com.jfoenix</option>
+                    </options>
                     <mainClass>cr.ac.una.marcador.App</mainClass>
                 </configuration>
                 <executions>
@@ -123,60 +131,20 @@
                         <id>ide-profile</id>
                         <configuration>
                             <options>
-                                <option>${profiler.jvmargs.arg1}</option>
-                                <option>${profiler.jvmargs.arg2}</option>
-                                <option>${profiler.jvmargs.arg3}</option>
-                                <option>${profiler.jvmargs.arg4}</option>
-                                <option>${profiler.jvmargs.arg5}</option>
+				<option>${profiler.jvmargs.arg1}</option>
+				<option>${profiler.jvmargs.arg2}</option>
+				<option>${profiler.jvmargs.arg3}</option>
+				<option>${profiler.jvmargs.arg4}</option>
+				<option>${profiler.jvmargs.arg5}</option>
                             </options>
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-            
+            </plugin>    
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jaxws-maven-plugin</artifactId>
                 <version>2.6</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>wsimport</goal>
-                        </goals>
-                        <configuration>
-                            <wsdlFiles>
-                                <wsdlFile>localhost_8080/relojunaWS/WS.wsdl</wsdlFile>
-                            </wsdlFiles>
-                            <packageName></packageName>
-                            <vmArgs>
-                                <vmArg>-Djavax.xml.accessExternalSchema=all</vmArg>
-                            </vmArgs>
-                            <wsdlLocation>http://localhost:8080/relojunaWS/WS?WSDL</wsdlLocation>
-                            <staleFile>${project.build.directory}/jaxws/stale/WS.stale</staleFile>
-                        </configuration>
-                        <id>wsimport-generate-WS</id>
-                        <phase>generate-sources</phase>
-                    </execution>
-                </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>javax.xml</groupId>
-                        <artifactId>webservices-api</artifactId>
-                        <version>2.0</version>
-                    </dependency>
-                </dependencies>
-                <configuration>
-                    <sourceDestDir>${project.build.directory}/generated-sources/jaxws-wsimport</sourceDestDir>
-                    <xnocompile>true</xnocompile>
-                    <verbose>true</verbose>
-                    <extension>true</extension>
-                    <catalog>${basedir}/src/jax-ws-catalog.xml</catalog>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.jvnet.jax-ws-commons</groupId>
-                <artifactId>jaxws-maven-plugin</artifactId>
-                <version>2.3</version>
                 <executions>
                     <execution>
                         <goals>
